1999-01-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Arguments.m ([Arguments_c -_getSwarmHome_:]): Don't verify
	swarmHome if there wasn't one found.  Move findSwarm to the
	end, for when all else fails.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

	* HDF5Object.m (hdf5_not_available): Moved from defobj.m.

	* Archiver.[hm], defobj.h: Switch registration and get/put to
	object-oriented interface.

	* DefClass.m ([CreatedClass_s -updateArchiver]): Use lispPutShallow:
	instead of lispArchiverPut().

	* HDF5Object.m ([HDF5_c -writeRowNames]): Prefer c_rnmlen to c_rnnlen
	(the latter has a default).

	* HDF5Object.[hm], defobj.h ([HDF5_c -checkName:]): New method.

	* Archiver.m (hdf5_output_objects): Split deep / shallow handling
	in to two different clauses.

1999-01-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* HDF5Object.[hm] ([HDF5_c -readRowNames]), defobj.h: New method.

	* Archiver.m, DefClass.[hm], DefObject.[hm], defobj.h:
	Switch from {hdf5,lisp}Out:deep: to {hdf5,lisp}Out{Shallow,Deep}:.

	* HDF5Object.h (HDF5_c): Replace c_rnlen with two variables:
	c_rnnlen and c_rnmlen.  

	* HDF5Object.[hm], defobj.h ([HDF5_c -setCompoundType:], [HDF5_c
	-setCount:],
	[HDF5_c -getCount]): New methods.
	([HDF5_c -setCompoundType:count:]): Remove.
	([HDF5_c -setRowNameLength:]): Remove.

	* HDF5Object.m ([HDF5_c -createEnd]): Check that rank is one and
	restore c_count in compoundType case.
	([HDF5_c -numberRecord:]): Use c_rnnlen instead of c_rnlen.
	([HDF5_c -nameRecord:name:]): Maintain max len in c_rnmlen.
	([HDF5_c -writeRowsNames]): Set row name length to max
	c_rnnlen and c_rnmlen, whichever is non-zero.

	* DefObject.m ([HDF5_c -hdf5Out:deep:]): Replace
	setCompoundType:count: with setCompoundType: (which defaults to 1).
	Create rowname entry using object name (for R).
	([HDF5_c -hdf5In:]): Remove compoundType check (now in
	shallowLoadObject:).

	* HDF5Object.m (objc_type_for_did): New function.